Implement "View media info" button Display LIVE badge for livestream URLs